<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/drawer_grouping_padding" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/relAddAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/footer_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/drawer_left"
            android:src="@drawable/add_acount_icon" />

        <TextView
            android:id="@+id/footer_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/footer_icon3"
            android:ellipsize="end"
            android:text="@string/adaccount"
            android:textColor="@color/text"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relSettings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/footer_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/drawer_left"
            android:src="@drawable/settings_icon" />

        <TextView
            android:id="@+id/footer_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/footer_icon1"
            android:ellipsize="end"
            android:text="@string/settings"
            android:textColor="@color/text"
            android:textSize="14sp" />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/relNotification"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="25dp"
            android:src="@drawable/notification_new"/>

        <TextView
            android:id="@+id/notificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/notificationIcon"
            android:ellipsize="end"
            android:text="Notification"
            android:textColor="@color/text"
            android:textSize="14sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchButton1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="70dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/notificationText"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:textSize="15dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relFeddBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/footer_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/drawer_left"
            android:src="@drawable/feed_back_icon" />

        <TextView
            android:id="@+id/footer_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/footer_icon1"
            android:ellipsize="end"
            android:text="@string/feedback"
            android:textColor="@color/text"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>