<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/container_down_full_dark">

    <RelativeLayout
        android:layout_above="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/relout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/card_frame_normal" >

        <TextView
            android:id="@+id/textView1Counted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="Selected : 21"
            android:textColor="@color/Gray" />

        <ImageView
            android:id="@+id/imageViewAddUsers"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_menu_invite" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imageViewAddUsers"
            android:text="Add Users"
            android:textColor="@color/Gray"
            android:textSize="10sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relout2"
        android:layout_alignRight="@+id/relout3"
        android:layout_below="@+id/imageViewAttached"
        android:layout_margin="15dp"
        android:background="@drawable/editbox_dropdown_background"
        android:gravity="start"
        android:hint="@string/tweethint"
        android:lines="4"
        android:maxLength="140"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="13sp" >
    </EditText>

    <RelativeLayout
        android:id="@+id/relout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_frame_normal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/myBlue"
            android:gravity="center"
            android:text="@string/tweet"
            android:textColor="@color/White" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_below="@+id/button1" />



    </RelativeLayout>

    <ImageView
        android:id="@+id/imageViewAttached"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relout2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/photo_frame_xlarge"
        android:padding="4dp"
        android:src="@drawable/tweetcompose"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView1Choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/relout3"
        android:layout_below="@+id/relout3"
        android:layout_marginTop="20dp"
        android:src="@drawable/choose_photos"
        android:visibility="gone" />


</RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>