<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ab_solid_light_holo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rel"
        android:layout_alignParentTop="true"
        android:background="@color/myBlue" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@drawable/editbox_background_normal"
        android:padding="2dp" >

        <EditText
            android:id="@+id/editText1HashTagSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:layout_toLeftOf="@+id/button1Go"
            android:background="@android:color/transparent"
            android:hint="username"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="@color/black" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/button1Go"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/tc_bg_paper"
            android:src="@drawable/ic_search_category_default" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/popup_reply_input_field"
        android:visibility="visible" >

        <com.socioboard.t_board_pro.ui.AccountImageView
            android:id="@+id/profile_pic"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="7dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/account_image"
            app:maskDrawable="@drawable/circle_mask" />

        <Button
            android:id="@+id/buttonUnfollow"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_blue_matte"
            android:text="UnFollow"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonFollow"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_blue_matte"
            android:text=" +Follow   "
            android:textColor="@color/White"
            android:textSize="10sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/followerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/profile_pic"
            android:text="@string/testaccount"
            android:textColor="@color/SteelBlue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/usersFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/followerName"
            android:layout_below="@+id/followerName"
            android:text="@string/testaccount"
            android:textColor="@color/Gray"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/textViewtmp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/followerName"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="27dp"
            android:layout_toRightOf="@+id/profile_pic"
            android:paddingBottom="5dp"
            android:text="@string/tweets"
            android:textSize="10sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewNotweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/profile_pic"
            android:layout_alignLeft="@+id/textViewtmp1"
            android:layout_alignRight="@+id/textViewtmp1"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textViewNoofFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewNoOfFollowings"
            android:layout_alignBottom="@+id/textViewNoOfFollowings"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:gravity="center"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewtmp1"
            android:layout_alignBottom="@+id/textViewtmp1"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/textViewtmp1"
            android:text="@string/following"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textView1"
            android:text="@string/followers"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textViewNoOfFollowings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewNotweets"
            android:layout_alignBottom="@+id/textViewNotweets"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignRight="@+id/textView1"
            android:gravity="center"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/datasheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_frame_normal"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/textView3Record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:text="followed for 33/56"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNoOfFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="Followers : 33"
            android:textSize="11sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reloutNbottom"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/datasheet"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/editbox_dropdown_background"
        android:divider="@android:color/transparent" >
    </ListView>

    <RelativeLayout
        android:layout_above="@+id/adView"
        android:id="@+id/reloutNbottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/ab_share_pack_holo_light"
        android:visibility="visible" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText1Range"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/editText1Range"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/editText1Range"
            android:background="@color/myBlue"
            android:text="Copy followers"
            android:textColor="@color/White" />

        <EditText
            android:id="@+id/editText1Range"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/editbox_background_normal"
            android:ems="10"
            android:hint="99"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1Range"
            android:textSize="10sp" >
        </TextView>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <RelativeLayout
        android:id="@+id/reloutProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reloutNbottom"
        android:layout_below="@+id/datasheet"
        android:layout_centerVertical="true"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>